<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nimtego.volt.view.UserLogActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/button_oval"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/logIn_edit_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:hint="@string/login_hint"/>

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="3.53"
            android:ems="10"
            android:padding="20dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sing_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:textColor="@color/colorAccent"
            android:text="@string/sing_in"/>

        <Button
            android:id="@+id/sing_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorAccent"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:elevation="100dp"
            android:layout_weight="1"
            android:text="@string/sing_up"/>
    </LinearLayout>

</LinearLayout>
